src/objects/Account_Plan_Contacts__c.object
<CustomObject>
    <description>Junction object between Account Plans and standard Contact object</description>
    <fields>
        <fullName>Account_Plan_Role_Responsibility__c</fullName>
        <label>Account Plan Role/Responsibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Plan_Review__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to the account plan</description>
        <label>Acct Plan/Review</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Contacts Related to Plan</relationshipLabel>
        <relationshipName>Account_Plan_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <inlineHelpText>Telephone number from contact record.</inlineHelpText>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Look up contacts related to this client. If contact can&apos;t be found, create a new Contact associated with the Account record.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts related to Account Plan</relationshipLabel>
        <relationshipName>Account_Plan_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <inlineHelpText>Title from Contact record. To revise, update the Contact record.</inlineHelpText>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Account Plan Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APC-{00000}</displayFormat>
        <label>Account Plan Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>